--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ p{
 
 .navbar {
     text-transform: uppercase;
-    font-family: 'PT Sans Narrow', Arial, sans-serif;
+    font-family: 'Slabo 27px', serif;
     font-weight: 500;
 }
 
